--- a/rpc-registry-zookeeper/pom.xml
+++ b/rpc-registry-zookeeper/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.adchina.rpc</groupId>
         <artifactId>rpc</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
     </parent>
 
     <artifactId>rpc-registry-zookeeper</artifactId>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>com.adchina.rpc</groupId>
             <artifactId>rpc-registry</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
