--- a/rpc-sample-client/pom.xml
+++ b/rpc-sample-client/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.adchina.rpc</groupId>
         <artifactId>rpc</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
     </parent>
 
     <artifactId>rpc-sample-client</artifactId>
@@ -33,13 +33,13 @@
         <dependency>
             <groupId>com.adchina.rpc</groupId>
             <artifactId>rpc-sample-api</artifactId>
-            <version>1.0.0</version>
+            <version>${project.version}</version>
         </dependency>
         <!-- RPC Client -->
         <dependency>
             <groupId>com.adchina.rpc</groupId>
             <artifactId>rpc-client</artifactId>
-            <version>1.0.0</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
