--- a/rpc-server/pom.xml
+++ b/rpc-server/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.adchina.rpc</groupId>
         <artifactId>rpc</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
     </parent>
 
     <artifactId>rpc-server</artifactId>
@@ -39,13 +39,13 @@
         <dependency>
             <groupId>com.adchina.rpc</groupId>
             <artifactId>rpc-common</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <!-- RPC Registry with ZooKeeper -->
         <dependency>
             <groupId>com.adchina.rpc</groupId>
             <artifactId>rpc-registry-zookeeper</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
