--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>com.adchina.rpc</groupId>
     <artifactId>rpc</artifactId>
-    <version>1.0.1</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -17,13 +17,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- JUnit -->
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.12</version>
-                <scope>test</scope>
-            </dependency>
             <!-- SLF4J -->
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -133,9 +126,6 @@
         <module>rpc-client</module>
         <module>rpc-registry</module>
         <module>rpc-registry-zookeeper</module>
-        <module>rpc-sample-api</module>
-        <module>rpc-sample-server</module>
-        <module>rpc-sample-client</module>
     </modules>
 
 </project>
