--- a/rpc-registry-zookeeper/pom.xml
+++ b/rpc-registry-zookeeper/pom.xml
@@ -9,17 +9,12 @@
     <parent>
         <groupId>com.adchina.rpc</groupId>
         <artifactId>rpc</artifactId>
-        <version>1.1.0</version>
+        <version>1.1.1</version>
     </parent>
 
     <artifactId>rpc-registry-zookeeper</artifactId>
 
     <dependencies>
-        <!-- SLF4J -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-        </dependency>
         <!-- ZooKeeper -->
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
@@ -29,6 +24,12 @@
         <dependency>
             <groupId>com.101tec</groupId>
             <artifactId>zkclient</artifactId>
+        </dependency>
+        <!-- RPC Common -->
+        <dependency>
+            <groupId>com.adchina.rpc</groupId>
+            <artifactId>rpc-common</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <!-- RPC Registry -->
         <dependency>
