--- a/rpc-common/pom.xml
+++ b/rpc-common/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.adchina.rpc</groupId>
         <artifactId>rpc</artifactId>
-        <version>1.1.0</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>rpc-common</artifactId>
