合并 hotfix-1.1.1 分支

--- a/rpc-registry-zookeeper/pom.xml
+++ b/rpc-registry-zookeeper/pom.xml
@@ -30,6 +30,12 @@
             <groupId>com.101tec</groupId>
             <artifactId>zkclient</artifactId>
         </dependency>
+        <!-- RPC Common -->
+        <dependency>
+            <groupId>com.adchina.rpc</groupId>
+            <artifactId>rpc-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- RPC Registry -->
         <dependency>
             <groupId>com.adchina.rpc</groupId>
