--- a/rpc-sample-server/src/main/resources/rpc.properties
+++ b/rpc-sample-server/src/main/resources/rpc.properties
@@ -1,2 +1,4 @@
-service.address=127.0.0.1:8000
-zk.address=127.0.0.1:2181
+rpc.service_address=127.0.0.1:8000
+rpc.registry_address=127.0.0.1:2181
+rpc.system_name=sample
+rpc.instance_id=100
