--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,25 @@
 
     <groupId>com.adchina.rpc</groupId>
     <artifactId>rpc</artifactId>
-    <version>1.3.0</version>
+    <version>1.2.1</version>
     <packaging>pom</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <version.slf4j>1.7.10</version.slf4j>
+        <version.spring>4.1.5.RELEASE</version.spring>
+        <version.netty>4.0.26.Final</version.netty>
+        <version.protostuff>1.0.9</version.protostuff>
+        <version.objenesis>2.1</version.objenesis>
+        <version.cglib>3.1</version.cglib>
+        <version.zookeeper>3.4.6</version.zookeeper>
+        <version.zkclient>0.4</version.zkclient>
+        <version.commons-lang>3.3.2</version.commons-lang>
+        <version.commons-collections>4.0</version.commons-collections>
+        <version.maven-compiler-plugin>3.2</version.maven-compiler-plugin>
+        <version.maven-surefire-plugin>2.18.1</version.maven-surefire-plugin>
+        <version.maven-source-plugin>2.4</version.maven-source-plugin>
+        <version.maven-javadoc-plugin>2.10.3</version.maven-javadoc-plugin>
     </properties>
 
     <dependencyManagement>
@@ -21,72 +35,72 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
-                <version>1.7.10</version>
+                <version>${version.slf4j}</version>
             </dependency>
             <!-- Spring -->
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
-                <version>4.1.5.RELEASE</version>
+                <version>${version.spring}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
-                <version>4.1.5.RELEASE</version>
+                <version>${version.spring}</version>
                 <scope>test</scope>
             </dependency>
             <!-- Netty -->
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
-                <version>4.0.26.Final</version>
+                <version>${version.netty}</version>
             </dependency>
             <!-- Protostuff -->
             <dependency>
                 <groupId>com.dyuproject.protostuff</groupId>
                 <artifactId>protostuff-core</artifactId>
-                <version>1.0.9</version>
+                <version>${version.protostuff}</version>
             </dependency>
             <dependency>
                 <groupId>com.dyuproject.protostuff</groupId>
                 <artifactId>protostuff-runtime</artifactId>
-                <version>1.0.9</version>
+                <version>${version.protostuff}</version>
             </dependency>
             <!-- Objenesis -->
             <dependency>
                 <groupId>org.objenesis</groupId>
                 <artifactId>objenesis</artifactId>
-                <version>2.1</version>
+                <version>${version.objenesis}</version>
             </dependency>
             <!-- CGLib -->
             <dependency>
                 <groupId>cglib</groupId>
                 <artifactId>cglib</artifactId>
-                <version>3.1</version>
+                <version>${version.cglib}</version>
             </dependency>
             <!-- ZooKeeper -->
             <dependency>
                 <groupId>org.apache.zookeeper</groupId>
                 <artifactId>zookeeper</artifactId>
-                <version>3.4.6</version>
+                <version>${version.zookeeper}</version>
             </dependency>
             <!-- ZkClient -->
             <dependency>
                 <groupId>com.101tec</groupId>
                 <artifactId>zkclient</artifactId>
-                <version>0.4</version>
+                <version>${version.zkclient}</version>
             </dependency>
             <!-- Apache Commons Lang -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.3.2</version>
+                <version>${version.commons-lang}</version>
             </dependency>
             <!-- Apache Commons Collections -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-collections4</artifactId>
-                <version>4.0</version>
+                <version>${version.commons-collections}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -97,17 +111,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
+                <version>${version.maven-compiler-plugin}</version>
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
             <!-- Test -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>${version.maven-surefire-plugin}</version>
                 <configuration>
                     <skipTests>true</skipTests>
                 </configuration>
@@ -124,7 +139,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>2.4</version>
+                        <version>${version.maven-source-plugin}</version>
                         <executions>
                             <execution>
                                 <phase>package</phase>
@@ -138,7 +153,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.3</version>
+                        <version>${version.maven-javadoc-plugin}</version>
                         <executions>
                             <execution>
                                 <phase>package</phase>
