--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.adchina.rpc</groupId>
+    <groupId>com.xxx.rpc</groupId>
     <artifactId>rpc</artifactId>
-    <version>1.2.1</version>
+    <version>1.3.0</version>
     <packaging>pom</packaging>
 
     <properties>
