--- a/rpc-common/pom.xml
+++ b/rpc-common/pom.xml
@@ -7,9 +7,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.adchina.rpc</groupId>
+        <groupId>com.xxx.rpc</groupId>
         <artifactId>rpc</artifactId>
-        <version>1.2.1</version>
+        <version>1.3.0</version>
     </parent>
 
     <artifactId>rpc-common</artifactId>
