--- a/rpc-registry-zookeeper/pom.xml
+++ b/rpc-registry-zookeeper/pom.xml
@@ -7,9 +7,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.adchina.rpc</groupId>
+        <groupId>com.xxx.rpc</groupId>
         <artifactId>rpc</artifactId>
-        <version>1.2.1</version>
+        <version>1.3.0</version>
     </parent>
 
     <artifactId>rpc-registry-zookeeper</artifactId>
@@ -32,13 +32,13 @@
         </dependency>
         <!-- RPC Common -->
         <dependency>
-            <groupId>com.adchina.rpc</groupId>
+            <groupId>com.xxx.rpc</groupId>
             <artifactId>rpc-common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!-- RPC Registry -->
         <dependency>
-            <groupId>com.adchina.rpc</groupId>
+            <groupId>com.xxx.rpc</groupId>
             <artifactId>rpc-registry</artifactId>
             <version>${project.version}</version>
         </dependency>
