--- a/rpc-sample-server/pom.xml
+++ b/rpc-sample-server/pom.xml
@@ -7,9 +7,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.adchina.rpc</groupId>
+        <groupId>com.xxx.rpc</groupId>
         <artifactId>rpc</artifactId>
-        <version>1.2.1</version>
+        <version>1.3.0</version>
     </parent>
 
     <artifactId>rpc-sample-server</artifactId>
@@ -17,13 +17,13 @@
     <dependencies>
         <!-- RPC Sample API -->
         <dependency>
-            <groupId>com.adchina.rpc</groupId>
+            <groupId>com.xxx.rpc</groupId>
             <artifactId>rpc-sample-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!-- RPC Server -->
         <dependency>
-            <groupId>com.adchina.rpc</groupId>
+            <groupId>com.xxx.rpc</groupId>
             <artifactId>rpc-server</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -59,7 +59,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib</classpathPrefix>
-                            <mainClass>com.adchina.rpc.sample.server.RpcBootstrap</mainClass>
+                            <mainClass>com.xxx.rpc.sample.server.RpcBootstrap</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
